--- a/output.css
+++ b/output.css
@@ -572,45 +572,79 @@ video {
   z-index: 10;
 }
 
+.m-10{
+  margin: 2.5rem;
+}
+
+.m-5{
+  margin: 1.25rem;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.my-auto{
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
 }
 
 .block{
   display: block;
 }
 
+.inline-block{
+  display: inline-block;
+}
+
 .flex{
   display: flex;
+}
+
+.grid{
+  display: grid;
 }
 
 .hidden{
   display: none;
 }
 
-.h-1{
-  height: 0.25rem;
-}
-
 .h-1\/3{
   height: 33.333333%;
+}
+
+.h-2\/3{
+  height: 66.666667%;
 }
 
 .h-5{
   height: 1.25rem;
 }
 
-.h-\[100vh\]{
-  height: 100vh;
-}
-
-.h-\[150px\]{
-  height: 150px;
-}
-
-.h-\[250px\]{
-  height: 250px;
+.h-\[40\%\]{
+  height: 40%;
 }
 
 .h-auto{
@@ -621,52 +655,24 @@ video {
   height: 100%;
 }
 
-.h-\[\]{
-  height: ;
+.h-28{
+  height: 7rem;
+}
+
+.h-\[20vh\]{
+  height: 20vh;
+}
+
+.h-\[20\]{
+  height: 20;
+}
+
+.h-\[20px\]{
+  height: 20px;
 }
 
 .h-\[50px\]{
   height: 50px;
-}
-
-.h-\[30px\]{
-  height: 30px;
-}
-
-.h-\[0px\]{
-  height: 0px;
-}
-
-.h-\[300px\]{
-  height: 300px;
-}
-
-.h-\[100px\]{
-  height: 100px;
-}
-
-.h-\[10px\]{
-  height: 10px;
-}
-
-.h-\[180px\]{
-  height: 180px;
-}
-
-.h-\[130px\]{
-  height: 130px;
-}
-
-.h-\[15px\]{
-  height: 15px;
-}
-
-.h-\[15\]{
-  height: 15;
-}
-
-.h-\[140px\]{
-  height: 140px;
 }
 
 .min-h-\[100vh\]{
@@ -677,16 +683,16 @@ video {
   min-height: 100vh;
 }
 
-.w-6{
-  width: 1.5rem;
+.w-1\/3{
+  width: 33.333333%;
 }
 
 .w-\[100\%\]{
   width: 100%;
 }
 
-.w-\[150px\]{
-  width: 150px;
+.w-\[60\%\]{
+  width: 60%;
 }
 
 .w-\[70\%\]{
@@ -701,52 +707,67 @@ video {
   width: 100%;
 }
 
-.w-6\/12{
-  width: 50%;
+.translate-x-0{
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.w-\[\]{
-  width: ;
+.transform{
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.w-\[50\]{
-  width: 50;
+@keyframes pulse{
+  50%{
+    opacity: .5;
+  }
 }
 
-.w-\[50px\]{
-  width: 50px;
+.animate-pulse{
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
-.w-\[5\]{
-  width: 5;
+@keyframes slideLeft{
+  0%{
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+
+  100%{
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
-.w-\[full\]{
-  width: full;
+.animate-slide-left{
+  animation: slideLeft 1s ease-in-out;
 }
 
-.w-5{
-  width: 1.25rem;
+@keyframes slideRight{
+  0%{
+    transform: translateX(100%);
+    opacity: 0;
+  }
+
+  100%{
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
-.max-w-7xl{
-  max-width: 80rem;
-}
-
-.max-w-\[250px\]{
-  max-width: 250px;
+.animate-slide-right{
+  animation: slideRight 1s ease-in-out;
 }
 
 .cursor-pointer{
   cursor: pointer;
 }
 
-.flex-col{
-  flex-direction: column;
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.flex-wrap{
-  flex-wrap: wrap;
+.flex-col{
+  flex-direction: column;
 }
 
 .items-center{
@@ -761,16 +782,32 @@ video {
   justify-content: space-between;
 }
 
+.justify-evenly{
+  justify-content: space-evenly;
+}
+
 .gap-10{
   gap: 2.5rem;
+}
+
+.gap-2{
+  gap: 0.5rem;
+}
+
+.gap-20{
+  gap: 5rem;
+}
+
+.gap-3{
+  gap: 0.75rem;
 }
 
 .gap-5{
   gap: 1.25rem;
 }
 
-.gap-6{
-  gap: 1.5rem;
+.gap-7{
+  gap: 1.75rem;
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
@@ -779,18 +816,14 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-1 > :not([hidden]) ~ :not([hidden]){
+.space-y-5 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
-.rounded-2xl{
-  border-radius: 1rem;
-}
-
-.rounded-3xl{
-  border-radius: 1.5rem;
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .rounded-lg{
@@ -801,22 +834,17 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-xl{
-  border-radius: 0.75rem;
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .border-2{
   border-width: 2px;
 }
 
-.border-blue-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity, 1));
-}
-
-.bg-blue-100{
+.bg-black{
   --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-300{
@@ -829,9 +857,9 @@ video {
   background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
 }
 
-.bg-blue-700{
+.bg-blue-600{
   --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1));
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
 }
 
 .bg-white{
@@ -839,19 +867,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-blue-200{
+.bg-orange-600{
   --tw-bg-opacity: 1;
-  background-color: rgb(191 219 254 / var(--tw-bg-opacity, 1));
-}
-
-.bg-blue-900{
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 58 138 / var(--tw-bg-opacity, 1));
-}
-
-.bg-blue-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
+  background-color: rgb(234 88 12 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gradient-to-r{
@@ -864,23 +882,8 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-orange-300{
-  --tw-gradient-from: #fdba74 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(253 186 116 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .to-blue-600{
   --tw-gradient-to: #2563eb var(--tw-gradient-to-position);
-}
-
-.to-orange-500{
-  --tw-gradient-to: #f97316 var(--tw-gradient-to-position);
-}
-
-.object-cover{
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .p-2{
@@ -899,19 +902,9 @@ video {
   padding: 1.25rem;
 }
 
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .py-4{
@@ -924,13 +917,36 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
 }
 
 .text-center{
   text-align: center;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-\[20px\]{
+  font-size: 20px;
 }
 
 .text-lg{
@@ -953,14 +969,6 @@ video {
   line-height: 2.25rem;
 }
 
-.text-\[40px\]{
-  font-size: 40px;
-}
-
-.text-\[20px\]{
-  font-size: 20px;
-}
-
 .font-bold{
   font-weight: 700;
 }
@@ -973,14 +981,14 @@ video {
   font-style: italic;
 }
 
+.text-blue-200{
+  --tw-text-opacity: 1;
+  color: rgb(191 219 254 / var(--tw-text-opacity, 1));
+}
+
 .text-blue-500{
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity, 1));
-}
-
-.text-blue-800{
-  --tw-text-opacity: 1;
-  color: rgb(30 64 175 / var(--tw-text-opacity, 1));
 }
 
 .text-white{
@@ -988,8 +996,9 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-\[\]{
-  color: ;
+.text-blue-300{
+  --tw-text-opacity: 1;
+  color: rgb(147 197 253 / var(--tw-text-opacity, 1));
 }
 
 .shadow-2xl{
@@ -998,22 +1007,48 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-black{
   --tw-shadow-color: #000;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.\*\:bg-gradient-to-r > *{
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+.shadow-gray-500{
+  --tw-shadow-color: #6b7280;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.transition{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-500{
+  transition-duration: 500ms;
+}
+
+.hover\:scale-105:hover{
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-150:hover{
+  --tw-scale-x: 1.5;
+  --tw-scale-y: 1.5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:cursor-pointer:hover{
   cursor: pointer;
-}
-
-.hover\:bg-blue-500:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-blue-800:hover{
@@ -1021,33 +1056,19 @@ video {
   background-color: rgb(30 64 175 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-blue-400:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:text-blue-400:hover{
-  --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-blue-700:hover{
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-sky-700:hover{
-  --tw-text-opacity: 1;
-  color: rgb(3 105 161 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-sky-400:hover{
-  --tw-text-opacity: 1;
-  color: rgb(56 189 248 / var(--tw-text-opacity, 1));
-}
-
 .hover\:underline:hover{
   text-decoration-line: underline;
+}
+
+.hover\:shadow-md:hover{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-blue-500:hover{
+  --tw-shadow-color: #3b82f6;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 @media (min-width: 640px){
@@ -1061,20 +1082,16 @@ video {
 }
 
 @media (min-width: 768px){
-  .md\:hidden{
-    display: none;
-  }
-
-  .md\:h-\[280px\]{
-    height: 280px;
+  .md\:w-1\/2{
+    width: 50%;
   }
 
   .md\:w-6\/12{
     width: 50%;
   }
 
-  .md\:w-\[250px\]{
-    width: 250px;
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row{
@@ -1085,20 +1102,16 @@ video {
     flex-direction: column;
   }
 
-  .md\:justify-between{
-    justify-content: space-between;
-  }
-
   .md\:gap-2{
     gap: 0.5rem;
   }
 
-  .md\:gap-6{
-    gap: 1.5rem;
-  }
-
   .md\:rounded-3xl{
     border-radius: 1.5rem;
+  }
+
+  .md\:p-20{
+    padding: 5rem;
   }
 
   .md\:p-3{
@@ -1107,11 +1120,6 @@ video {
 
   .md\:p-4{
     padding: 1rem;
-  }
-
-  .md\:px-20{
-    padding-left: 5rem;
-    padding-right: 5rem;
   }
 
   .md\:text-2xl{
@@ -1124,8 +1132,19 @@ video {
     line-height: 2.25rem;
   }
 
+  .md\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
   .md\:text-lg{
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
